# python-project-52

./: .dockerignore  .env  .env.example  .gitignore  .gitingore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements1.txt  setup.cfg
.github/workflows/: test_and_lint_check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_remove_label_creator.py  0002_remove_label_tasks_alter_label_creator.py
task_manager/labels/tests/: setting.py  test_forms.py  test_models.py  test_urls.py  test_views.py
task_manager/statuses/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0002_remove_status_creator.py
task_manager/statuses/tests/: setting.py  settings_for_tests.py  test_forms.py  test_models.py  test_urls.py  test_views.py  tests_forms.py  tests_models.py  tests_settings.py  tests_views.py
task_manager/tasks/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor.py  0003_alter_task_creator_alter_task_status.py  0004_remove_task_status_task_labels.py  0005_task_status.py  (+7 more)
task_manager/templates/: base.html  base_create_and_update.html  bootdemo.html  create_user.html  delete_object_template.html  delete_user.html  index.html  sign_up.html  update_user.html  user_creation.html  users.html
task_manager/templatetags/: status_tags.py  user_tags.py
task_manager/user/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
task_manager/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+36 files in other folders)
