[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager made with Django"
authors = ["Nedashkovsky <Nedashkovsky@ymail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
